[package]
name = "kroxy"
version = "0.1.0"
edition = "2024"
desciption = "GRPC proxy for Kafka"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "fmt"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
